:art: Refactored & restructured code, replaced filtering with schufflejs library & optimized image-fetching

--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
                         <span id="filter_shards">Shards Owned</span>
                     </div>
                 </div>
-                <div class="row champion_list">
+                <div class="row champion_list filter-grid">
                     <div class="col-12 spinner">
                         <i class="fas fa-spinner fa-pulse"></i>
                     </div>
