✨ Added sale filter

--- a/src/index.html
+++ b/src/index.html
@@ -81,10 +81,11 @@
                     </h2>
                     <div class="filter_container mb-3">
                         <span id="filter_owned">Champ Owned</span>
-                        <span id="filter_unowned">Champ Not Owned</span>
+                        <span id="filter_unowned">Champ not Owned</span>
                         <span id="filter_skins_owned">Skins Owned</span>
-                        <span id="filter_skins_unowned">Skins Not Owned</span>
+                        <span id="filter_skins_unowned">Skins not Owned</span>
                         <span id="filter_shards">Shards Owned</span>
+                        <span id="filter_sale">Skins on Sale</span>
                         <span id="search">
                             <i class="fas fa-search"></i>
                             <input type="text" class="form-control" id="search_box">
