✨ Added eternals filter

--- a/src/index.html
+++ b/src/index.html
@@ -86,6 +86,7 @@
                         <span id="filter_skins_unowned">Skins not Owned</span>
                         <span id="filter_shards">Shards Owned</span>
                         <span id="filter_sale">Skins on Sale</span>
+                        <span id="filter_eternals_unowned">Eternals not Owned</span>
                         <span id="search">
                             <i class="fas fa-search"></i>
                             <input type="text" class="form-control" id="search_box">
