✨ Added topBar for drag, minimize & close

--- a/src/index.html
+++ b/src/index.html
@@ -12,16 +12,21 @@
         <script src="assets/js/ext/fontawesome.min.js" defer></script>
     </head>
     <body>
-        <div class="quit">
-            <i class="fas fa-times"></i>
-        </div>
         <div class="overlay">
             <i class="fas fa-bomb"></i>
             <p>Seems like something exploded!</p>
             <small>Did you start League of Legends?</small>
             <button id="reload-page" type="button" class="btn btn-info btn-sm">Yes!</button>
         </div>
-        <div class="container mt-3">
+        <div class="bar">
+            <div class="app-btn minimize">
+                <i class="fas fa-minus"></i>
+            </div>
+            <div class="app-btn quit">
+                <i class="fas fa-times"></i>
+            </div>
+        </div>
+        <div class="container pt-5">
             <h1 class="brand-title">LoL SkinAnalyst</h1>
             <div id="round_stat_container" class="row mt-3">
                 <div class="col-4">
